<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/content_main" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="#FF4081"
                />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:lines="3"
                android:scrollHorizontally="false"
                android:hint="@string/description"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_age"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/ageButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <EditText
                    android:id="@+id/ageEditText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_bd"
                    android:inputType="text"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="6dp"/>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="setDate"
                    android:text="@string/date_button_set"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/shadow_button_layer_list"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:layout_marginTop="5dp"
                    android:id="@+id/secondActivityBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="goToSecondActivity"
                    android:text="@string/go_to_second_activity"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/shadow_button_layer_list"/>
            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>